--- a/sass/partials/_nav-footer.scss
+++ b/sass/partials/_nav-footer.scss
@@ -6,7 +6,14 @@
 @media (max-width: $screen-xs-max) {
     
     .footer-nav {
+        margin-bottom: -20px;
+        .nav-item {
+            display: block;
+            margin-top: 2px;
+        }
         .nav-link {
+            
+            
             &:hover {
                 color: $link-color-emphasize;
             }
@@ -14,16 +21,13 @@
     }
     .footer-content {
         padding-left: 20px;
+        .title {
+            margin-top: 30px;
+        }
         
     }
 }
 
-@media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
-    .footer-content {
-        padding-left: 20px;
-        
-    }
-}
 
 @media (min-width: $screen-sm-min) {
     .footer-nav {
